# TrunkStream

./: .dockerignore  .gitignore  cleanup.py  compose.yml  dockerfile  logconfig.yml  pyproject.toml  queries.js  requirements.txt  run.py  test.html  testmongo.py  testmongo2.py
tests/: tests.py
trunkstream/: app.py  downloadmodel.py  worker.py
trunkstream/controllers/: __init__.py  calls.py  transcribe.py  uploadhandler.py
trunkstream/dbmodels/: database.py
trunkstream/models/: __init__.py  call.py  frequency.py  source.py  tones.py  transcript.py
trunkstream/templates/: calllist.html  toneAlert.html
